--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -5,6 +7,7 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -39,6 +42,7 @@ header {
 section {
     display: flex;
     align-items: center;
+    flex-direction: column;
     min-height: 100px;
     flex: 1;
 }
@@ -87,7 +91,7 @@ footer {
 /* Simuladores */
 
 .simulator-container {
-    width: 50%;
+    width: 850px;
     margin: 20px auto;
     padding: 0;
     border-radius: 8px;
@@ -95,9 +99,87 @@ footer {
 }
 
 .simulator-content {
+    width: 850px;
+    padding: 0;
+}
+
+.info-container {
+    display: grid;
+    grid-template-columns: 0.75fr 0.75fr;
+    gap: 600px;
+    margin: 30px 50px;
+}
+
+.info-content {
+    display: flex;
+    flex-direction: column;
+    align-items: first baseline;
+}
+
+.carousel-slide {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.carousel-slide img {
+    width: 70%;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.lightbox {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    padding: 0;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.lightbox-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 80%;
+}
+
+.close-lightbox {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.nav-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 30px;
+    border: none;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.prev-btn {
+    left: 20px;
+}
+
+.next-btn {
+    right: 20px;
 }
 
 /* Animaciones */
@@ -112,6 +194,34 @@ footer {
 
 .enalces-container i:hover {
     color: #b6e1f9;
+}
+
+.carousel-slide img:hover {
+    transform: scale(1.05);
+}
+
+.close-lightbox:hover,
+.close-lightbox:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation: fadeIn 0.5s;
+}
+
+.nav-btn:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Resposive */
